Made some changes

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Online Shopping</title>
+    <title>Online Shopping in Nepal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
